project/static/base/css/main.css
/*
	DUCSS Website
	by Matt Donnelly

	Last Updated: 20/09/13

	Colors:
		- Default body text  #808080
		- Header text        #2d2d2d
		- Dividers           #dedede
		- Links              #ff8b0f

	Fonts:
		- Droid Sans
*/

/* =================== Reset =================== */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* =================== Main =================== */

body {
	height: 100%;
	font-family: 'Droid Sans', sans-serif;
	color: #808080;
}

p {
	line-height: 25px;
	font-size: 1.1em;
}

a {
	color: #ff8b0f;
	text-decoration: none;
}

h1 {
	width: 100%;
	margin-bottom: 40px;
	padding-bottom: 25px;
	font-size: 1.6em;
	color: #ff8b0f;
	border-bottom: 1px solid #dedede; 
}

h2 {
	margin-bottom: 10px;
	font-size: 1.3em;
	font-weight: bold;
	color: #2d2d2d;
}

h3 {
	margin-bottom: 10px;
	font-size: 1.1em;
	font-weight: bold;
	text-transform: uppercase;
	color: #2d2d2d;
}

label {
	visibility: hidden;
}

.container {
   min-height:100%;
   position:relative;
}

.wrapper {
	width: 1000px;
	margin: 0 auto;
}

/* =============== Django Classes =============== */
.help-inline {
	font-style: italic;
	color: #ff8b0f;
}

#body.wrapper{
	padding-bottom: 100px;
}

/* =================== Header =================== */

header {
	display: block;
	margin-bottom: 60px;
	padding: 25px 0;
	border-bottom: 1px solid #dedede;
}

header img#logo {
	float: left;
}

header:after {
	content: "";
	display: block;
	clear: both;
}

ul.nav {
	display: inline-block;
	float: right;
	padding-top: 10px;
}

ul.nav li {
	display: inline-block;
	margin-left: 30px;
	font-size: 1.1em;
	vertical-align: middle;
}

ul.nav li:first-child {
	margin-left: 0;
}

ul.nav a {
	padding-bottom: 10px;
	text-decoration: none;
	color: #808080;
}

ul.nav a#twitter {
	display: inline-block;
	width: 41px;
	height: 41px;
	padding-bottom: 0;
	background: url("../images/social-twitter.png") top no-repeat;
}

ul.nav a#facebook {
	display: inline-block;
	width: 41px;
	height: 41px;
	padding-bottom: 0;
	background: url("../images/social-facebook.png") top no-repeat;
}

ul.nav a:hover {
	border-bottom: 2px solid #ff8b0f;
}

ul.nav a#twitter:hover {
	border-bottom: none;
	background: url("../images/social-twitter.png") bottom no-repeat;
}

ul.nav a#facebook:hover {
	border-bottom: none;
	background: url("../images/social-facebook.png") bottom no-repeat;
}

/* =================== Content =================== */

section {
	display: block;
	margin-bottom: 60px;
}

section#events .row {
	margin-bottom: 50px;
}

section#events .row:after {
	content: "";
	display: block;
	clear: both;
}

section#events .col {
	width: 48%;
	float: left;
	margin-top: 20px;
	margin-right: 20px;
}

section#events .col:last-child {
	width: 50%;
	margin-right: 0;
}

/* =================== Events =================== */

.event {
	margin-bottom: 20px;
}

.event .date {
	float: left;
	height: 85px;
	width: 100px;
	margin-right: 20px;
	padding: 12px 0 0 0;
	border-radius: 5px;
	text-align: center;
	background-color: #ff8b0f;
}

.event .date span.day {
	display: block;
	font-size: 2.8em;
	font-weight: bold;
	text-align: center;
	color: #fff;	
}

.event .date span.month {
	display: block;
	font-size: 1.5em;
	font-weight: normal;
	text-align: center;
	text-transform: uppercase;
	color: #fff;
}

.event .info {
	padding-top: 15px;
}

.event .info span {
	display: block;
	margin-bottom: 10px;
	font-size: 1.1em;
	color: #808080;
}

.more-events {
	clear: both;
	padding-top: 50px;
	text-align: center;
	font-size: 1.2em;
}

/* =================== Services =================== */

.service {
	margin-bottom: 30px;
}

.service::after {
	content: "";
	display: block;
	clear: both;
}

.service .left {
	display: inline-block;
	float: left;
	width: 49%;
}

.service .right {
	display: inline;
	float: right;
	width: 49%;
}

.service figure.right img {
	margin-left: 60px;
}

/* =================== Contact Us =================== */

input,
textarea,
button {
	font-family: inherit;
}

input:focus,
textarea:focus,
button:focus {
	outline: none;
}

input[type=text],
input[type=email],
input[type=url] {
	width: 70%;
	height: 50px;
	margin-bottom: 20px;
	padding-left: 10px;
	border: 2px solid #c6c6c6;
	border-radius: 5px;
	font-size: 20px;
	color: #2d2d2d;
	background: #fff;
	background: -moz-linear-gradient(top, #ececec 0px, #ffffff 3px);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0px, #ececec), color-stop(3px, #ffffff));
	background: -webkit-linear-gradient(top, #ececec 0px, #ffffff 3px);
	background: -o-linear-gradient(top, #ececec 0px, #ffffff 3px);
	background: -ms-linear-gradient(top, #ececec 0px, #ffffff 3px);
	background: linear-gradient(to bottom, #ececec 0px, #ffffff 3px);
}

input[type=text]:focus,
input[type=email]:focus,
input[type=url]:focus {
	border-color: #ff8b0f;
}

textarea {
	width: 85%;
	min-height: 100px;
	max-width: 100%;
	max-height: 450px;
	margin-bottom: 20px;
	padding-top: 5px;
	padding-left: 10px;
	border: 2px solid #c6c6c6;
	border-radius: 5px;
	font-size: 20px;
	line-height: 30px;
	color: #2d2d2d;
	background: #fff;
	background: -moz-linear-gradient(top, #ececec 0px, #ffffff 3px);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0px, #ececec), color-stop(3px, #ffffff));
	background: -webkit-linear-gradient(top, #ececec 0px, #ffffff 3px);
	background: -o-linear-gradient(top, #ececec 0px, #ffffff 3px);
	background: -ms-linear-gradient(top, #ececec 0px, #ffffff 3px);
	background: linear-gradient(to bottom, #ececec 0px, #ffffff 3px);
}

textarea:focus {
	border-color: #ff8b0f;
}

button, input[type=submit] {
	margin-bottom: 20px;
	padding: 15px 50px;
	font-size: 1em;
	font-weight: bold;
	text-transform: uppercase;
	color: #fff;
	background-color: #ff8b0f;
	border: none;
	border-radius: 5px;
}

button:hover,
input[type=submit]:hover {
	background-color: #ffa13c;
	cursor: pointer;
}

button:active,
input[type=submit]:active {
	background-color: #e47600;
}

/* =================== Footer =================== */

footer {
	position: absolute;
	bottom: 0;
	width: 100%;
	display: block;
	padding-top: 40px;
	height: 100px;
	border-top: 5px solid #dedede;
	background-color: #2d2d2d;
}

footer .col {
	display: inline-block;
	width: 33%;
}

footer a.back-to-top {
	display: block;
	vertical-align: middle;
	font-size: 1.2em;
	font-weight: bold;
	color: #808080;
}

footer #social {
	display: block;
	width: 200px;
	margin: 0 auto;
}

footer #social a#twitter {
	display: inline-block;
	margin-right: 30px;
	vertical-align: middle;
	height: 41px;
	width: 41px;
	background: url("../images/social-twitter.png") top no-repeat;
}

footer #social a#facebook {
	display: inline-block;
	margin-right: 30px;
	vertical-align: middle;
	height: 41px;
	width: 41px;
	background: url("../images/social-facebook.png") top no-repeat;
}

footer #social a#twitter:hover {
	background: url("../images/social-twitter.png") bottom no-repeat;
}

footer #social a#facebook:hover {
	border-bottom: none;
	background: url("../images/social-facebook.png") bottom no-repeat;
}

footer img#logo {
	display: inline-block;
	vertical-align: middle;
	margin-left: 160px;
}

